--- a/Lighthouse/Base.lproj/Main.storyboard
+++ b/Lighthouse/Base.lproj/Main.storyboard
@@ -338,28 +338,87 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="owo-32-HTQ">
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                 <subviews>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="oof-Wl-ac8">
-                                        <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Fc-6k-swz">
+                                        <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                                         <animations/>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        <variation key="widthClass=compact" fixedFrame="YES">
-                                            <rect key="frame" x="0.0" y="120" width="240" height="480"/>
-                                        </variation>
-                                    </tableView>
+                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                        <color key="textColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dear Name" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wr4-uz-2ci">
+                                        <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                        <animations/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <color key="textColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </label>
                                 </subviews>
                                 <animations/>
                                 <color key="backgroundColor" red="0.23137254901960785" green="0.50196078431372548" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="6Fc-6k-swz" firstAttribute="top" secondItem="owo-32-HTQ" secondAttribute="top" constant="35" id="0m4-Vb-Hvk"/>
+                                    <constraint firstItem="6Fc-6k-swz" firstAttribute="top" secondItem="owo-32-HTQ" secondAttribute="top" constant="35" id="2qg-Rd-auM"/>
+                                    <constraint firstItem="Wr4-uz-2ci" firstAttribute="top" secondItem="owo-32-HTQ" secondAttribute="top" constant="64" id="4G5-W1-sJP">
+                                        <variation key="widthClass=compact" constant="72"/>
+                                    </constraint>
+                                    <constraint firstItem="Wr4-uz-2ci" firstAttribute="leading" secondItem="owo-32-HTQ" secondAttribute="leading" id="58T-In-VeZ"/>
+                                    <constraint firstItem="Wr4-uz-2ci" firstAttribute="leading" secondItem="owo-32-HTQ" secondAttribute="leadingMargin" id="9ki-vE-0cz"/>
+                                    <constraint firstItem="6Fc-6k-swz" firstAttribute="leading" secondItem="owo-32-HTQ" secondAttribute="leading" id="EdL-bM-KBR"/>
+                                    <constraint firstItem="Wr4-uz-2ci" firstAttribute="top" secondItem="owo-32-HTQ" secondAttribute="top" constant="64" id="S6H-po-Jpl"/>
+                                    <constraint firstItem="6Fc-6k-swz" firstAttribute="leading" secondItem="owo-32-HTQ" secondAttribute="leading" id="aRh-Pr-lLu"/>
+                                    <constraint firstItem="Wr4-uz-2ci" firstAttribute="width" secondItem="owo-32-HTQ" secondAttribute="width" multiplier="0.9" id="leL-du-Yl6"/>
+                                    <constraint firstItem="6Fc-6k-swz" firstAttribute="leading" secondItem="owo-32-HTQ" secondAttribute="leadingMargin" id="sxM-p3-eAj"/>
+                                    <constraint firstItem="6Fc-6k-swz" firstAttribute="width" secondItem="owo-32-HTQ" secondAttribute="width" multiplier="0.9" id="uDX-fx-MWO">
+                                        <variation key="widthClass=compact" constant="0.0"/>
+                                    </constraint>
+                                    <constraint firstItem="Wr4-uz-2ci" firstAttribute="leading" secondItem="owo-32-HTQ" secondAttribute="leading" id="yo1-hF-7bv"/>
+                                </constraints>
                                 <variation key="default">
                                     <mask key="subviews">
-                                        <exclude reference="oof-Wl-ac8"/>
+                                        <exclude reference="6Fc-6k-swz"/>
+                                        <exclude reference="Wr4-uz-2ci"/>
+                                    </mask>
+                                    <mask key="constraints">
+                                        <exclude reference="0m4-Vb-Hvk"/>
+                                        <exclude reference="2qg-Rd-auM"/>
+                                        <exclude reference="EdL-bM-KBR"/>
+                                        <exclude reference="aRh-Pr-lLu"/>
+                                        <exclude reference="sxM-p3-eAj"/>
+                                        <exclude reference="uDX-fx-MWO"/>
+                                        <exclude reference="4G5-W1-sJP"/>
+                                        <exclude reference="58T-In-VeZ"/>
+                                        <exclude reference="9ki-vE-0cz"/>
+                                        <exclude reference="S6H-po-Jpl"/>
+                                        <exclude reference="leL-du-Yl6"/>
+                                        <exclude reference="yo1-hF-7bv"/>
                                     </mask>
                                 </variation>
                                 <variation key="widthClass=compact">
                                     <mask key="subviews">
-                                        <include reference="oof-Wl-ac8"/>
+                                        <include reference="6Fc-6k-swz"/>
+                                        <include reference="Wr4-uz-2ci"/>
+                                    </mask>
+                                    <mask key="constraints">
+                                        <include reference="0m4-Vb-Hvk"/>
+                                        <include reference="2qg-Rd-auM"/>
+                                        <include reference="EdL-bM-KBR"/>
+                                        <exclude reference="aRh-Pr-lLu"/>
+                                        <exclude reference="sxM-p3-eAj"/>
+                                        <include reference="uDX-fx-MWO"/>
+                                        <include reference="4G5-W1-sJP"/>
+                                        <exclude reference="58T-In-VeZ"/>
+                                        <exclude reference="9ki-vE-0cz"/>
+                                        <exclude reference="S6H-po-Jpl"/>
+                                        <include reference="leL-du-Yl6"/>
+                                        <include reference="yo1-hF-7bv"/>
                                     </mask>
                                 </variation>
                             </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="oof-Wl-ac8">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <animations/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D7f-wv-xGF">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                 <animations/>
@@ -371,6 +430,7 @@
                         <animations/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="oof-Wl-ac8" firstAttribute="top" secondItem="Nnc-xf-56R" secondAttribute="bottom" constant="100" id="1R1-5Q-9Dc"/>
                             <constraint firstItem="ws2-Jw-iQr" firstAttribute="top" secondItem="owo-32-HTQ" secondAttribute="bottom" id="71W-Ky-9Pr"/>
                             <constraint firstItem="ws2-Jw-iQr" firstAttribute="top" secondItem="D7f-wv-xGF" secondAttribute="bottom" id="77y-HH-E9y"/>
                             <constraint firstItem="owo-32-HTQ" firstAttribute="top" secondItem="KaI-Yq-NpV" secondAttribute="top" id="8n5-LS-oCO"/>
@@ -380,20 +440,27 @@
                             <constraint firstItem="owo-32-HTQ" firstAttribute="leading" secondItem="KaI-Yq-NpV" secondAttribute="leading" id="VfP-bb-EBv"/>
                             <constraint firstItem="D7f-wv-xGF" firstAttribute="leading" secondItem="KaI-Yq-NpV" secondAttribute="leadingMargin" id="bVs-eg-Syh"/>
                             <constraint firstItem="D7f-wv-xGF" firstAttribute="top" secondItem="KaI-Yq-NpV" secondAttribute="top" id="fck-oG-gh4"/>
+                            <constraint firstItem="oof-Wl-ac8" firstAttribute="leading" secondItem="KaI-Yq-NpV" secondAttribute="leading" id="gUE-Ii-ie0"/>
                             <constraint firstAttribute="trailing" secondItem="D7f-wv-xGF" secondAttribute="trailing" id="iLf-za-L1M"/>
+                            <constraint firstItem="ws2-Jw-iQr" firstAttribute="top" secondItem="oof-Wl-ac8" secondAttribute="bottom" id="lD4-Me-pbE"/>
                             <constraint firstItem="D7f-wv-xGF" firstAttribute="top" secondItem="Nnc-xf-56R" secondAttribute="bottom" id="o0w-nz-Vz6"/>
+                            <constraint firstItem="oof-Wl-ac8" firstAttribute="width" secondItem="KaI-Yq-NpV" secondAttribute="width" multiplier="0.6" id="wej-v2-YSQ"/>
                             <constraint firstItem="owo-32-HTQ" firstAttribute="width" secondItem="KaI-Yq-NpV" secondAttribute="width" multiplier="0.6" id="xaM-FI-Gr4"/>
                             <constraint firstItem="ws2-Jw-iQr" firstAttribute="top" secondItem="D7f-wv-xGF" secondAttribute="bottom" id="y5G-pb-Bf4"/>
                         </constraints>
                         <variation key="default">
                             <mask key="subviews">
                                 <exclude reference="owo-32-HTQ"/>
+                                <exclude reference="oof-Wl-ac8"/>
                                 <exclude reference="D7f-wv-xGF"/>
                             </mask>
                             <mask key="constraints">
                                 <exclude reference="8n5-LS-oCO"/>
                                 <exclude reference="VfP-bb-EBv"/>
                                 <exclude reference="xaM-FI-Gr4"/>
+                                <exclude reference="1R1-5Q-9Dc"/>
+                                <exclude reference="gUE-Ii-ie0"/>
+                                <exclude reference="wej-v2-YSQ"/>
                                 <exclude reference="Ffd-Wi-q9g"/>
                                 <exclude reference="Kx3-ZS-T9V"/>
                                 <exclude reference="OFH-Oj-UGu"/>
@@ -403,18 +470,23 @@
                                 <exclude reference="o0w-nz-Vz6"/>
                                 <exclude reference="71W-Ky-9Pr"/>
                                 <exclude reference="77y-HH-E9y"/>
+                                <exclude reference="lD4-Me-pbE"/>
                                 <exclude reference="y5G-pb-Bf4"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
                             <mask key="subviews">
                                 <include reference="owo-32-HTQ"/>
+                                <include reference="oof-Wl-ac8"/>
                                 <include reference="D7f-wv-xGF"/>
                             </mask>
                             <mask key="constraints">
                                 <include reference="8n5-LS-oCO"/>
                                 <include reference="VfP-bb-EBv"/>
                                 <include reference="xaM-FI-Gr4"/>
+                                <include reference="1R1-5Q-9Dc"/>
+                                <include reference="gUE-Ii-ie0"/>
+                                <include reference="wej-v2-YSQ"/>
                                 <exclude reference="Ffd-Wi-q9g"/>
                                 <exclude reference="Kx3-ZS-T9V"/>
                                 <include reference="OFH-Oj-UGu"/>
@@ -424,12 +496,14 @@
                                 <exclude reference="o0w-nz-Vz6"/>
                                 <include reference="71W-Ky-9Pr"/>
                                 <include reference="77y-HH-E9y"/>
+                                <include reference="lD4-Me-pbE"/>
                                 <exclude reference="y5G-pb-Bf4"/>
                             </mask>
                         </variation>
                     </view>
                     <connections>
                         <outlet property="groupsTableView" destination="oof-Wl-ac8" id="04w-6H-icZ"/>
+                        <outlet property="nameLabel" destination="Wr4-uz-2ci" id="eio-zP-znW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nVK-oe-dSv" userLabel="First Responder" sceneMemberID="firstResponder"/>
